updated foreign exchange calculator page

--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -1,7 +1,7 @@
 {
   "simpleapps.components.Navigation.fx": "DE - FX Calculator",
   "simpleapps.components.Navigation.meetingcostcalculator": "DE - Meeting cost calculator",
-  "simpleapps.components.Navigation.userprofile": "DE - Simple user profile",
+  "simpleapps.components.Navigation.taskboard": "DE - Simple task board",
   "simpleapps.components.Navigation.dashboard": "DE - Dashboard",
   "simpleapps.components.Navigation.jsone": "DE - JSON Editor",
   "simpleapps.components.Navigation.github": "DE - Github code repos",
